# milan

./: .gitignore  Cargo.toml  Dockerfile  FIX_DYNAMIC_ROUTES.md  QUICK_START_WASM.md  README.md  WASM_INTEGRATION.md  deploy.sh  entrypoint.sh  nginx.conf  remove_duplicate_pk.py  restore_constraints.py  seed_permissions.sql  separate_fks.py  test_wasm_integration.sh
backend/: Cargo.toml  I18N_BACKEND_CONFIG.md  ODOO_MODULES_COMPLETE.txt
backend/.sqlx/: query-042de06eca655293553f70e79afb354dbdc3270254d82b94cb288ad5131c645f.json  query-08d5c3becc9b2b89af8de3b9f6dabb7d9d2c925f810da954546f2cde8ea2b03b.json  query-0a728d56b7d33ef6cdb685347ae9150c5259afbfa9208407fa0df424e2aa564c.json  query-0d7ff31d859610c64a732f22f522eb4cdcbf0311c157e2183918df19b170ead0.json  query-0fe5a044ad6f7da5f7903f0955d563b429b8141c3a77c6d28803ce4a03f394c2.json  query-1580869cd5c4aa79fb823274f0618f420e98fd875d39a22c735d9cdbf6b12f5f.json  query-162be1bb27e58b23406ec4fd9cf4917e057d6a835195e9714d3d73aa0b337b86.json  query-166235b36901b7e5cfa482c3342869b76e76e45c69a79ccb835b8915a2533132.json  query-16a3557d6f31b4693a0f103173fbb959978ab25ea22ed83ce9f98ba146dc674b.json  query-17982751e432131ac45f4c88e9f3382985b0d8515173c17f872961acdc11d809.json  query-182cf09f2f125bf303b68409c5d1f28111c7e41b170e8cd01ab55ede64fcbade.json  query-19d5fe4c25131aa17b41ce08029656431d3806c2469452117d8122da584d43b8.json  query-1da12ba94d0a4c64591dbc7ce2ac4daae0c3a1e43d3abed554673ab438645fe9.json  query-1efe1c6f6fbba31c23871795ba5a2b1f4698fa52df89dcd197b249f73cf62512.json  query-2630c2e022ca3490b50960ef58f87e75829cd1163da446a3e85608e3cd690651.json  query-274b9f36f18960efd3315a40a87677c2427321f3626f538a5d5e5f4d1ade2792.json  query-2deecb9520f1a2d8aa2068bb1fb51ef2940446c0e678d73163a7b353486a0138.json  query-2f4941de34108aa340841fef673db5d8d4e92adf3277d7911b7ee09214a3b9d2.json  query-335aec0fcce2539c97c6f252967b734c98f7413f0a09334858906401d359e888.json  query-342d9124d11e5aed0881a668d79b84a0f784486881639040e658bf066798d854.json  query-35c17bba8d545470794dd30d6a13f1ef77d69c2895e94a71e1cbe90e3fe20fc1.json  query-38a81c398965ba872facc7cd69f5f1ad4ab9def6d61113b151d6d2247552389a.json  query-40e9c7040f2fbf6e3ba52a85d1c9d3d577f1c70b3650f92fbbfa84f11db43d41.json  query-41d5b66dc554760f26fb1be36dc3f4afcfcf8d32642310bb66d0275fd1133049.json  query-439653433d2e5ec290519054a5c629669595b6e26a95e8e521d4be95c5d54aad.json  query-45b41f16380f063ebbaf635051b76998090a0620b5b315ac31e22775ee37ff98.json  query-48d8fa2e161d79ec57e62317a990d10505a3b5b34176057833b95fc074421d0c.json  query-49617ad53ff3b66afc7bc7a3decdb3391c28df916c623cfae8e1c6a8851549bb.json  query-4a9804f1aa34471bdd60775b347d013529d24e5033865f5486d063cce5afd1e4.json  query-4c230bae27eaac125ebf3ba9f034ff28f2dc29f189e8c3cbbd4e19407e148402.json  query-4de2d6e328a0ef4ddb5e2d34cf1869b89bd4ae45c25f9ceecb45f7414a154da4.json  query-54770204b977f32658039128c0813a8ce7cb17b3cbda2d0f8558256378c8849d.json  query-55b7b59322aa3aca3b60f641224e3b0d1899966764bb980e13c5fe6c0c728208.json  query-575819d106918532ea31836314a53a98eebfc483d04c051c03e7b4ac3c051102.json  query-57ff816e5cdb70e026ae8704e1a9df80b3af7ff124db349a5a70aefb1a3daa01.json  query-59e0d126eb24a4a64e0a4bee5c47297a668d9e3183df20e17442a61f1d99ff05.json  query-5e5c17dc822adefc46cbcd4b0630a6dde96d40b08e4c24346ccf5e946775ca74.json  (+57 more)
(+744 files in other folders)
